@@ -777,7 +777,35 @@ read.csv("Sample1_PureCN.csv")
 
 \Biocpkg{PureCN} currently only flags samples with warnings, it does not mark
 any samples as failed. The \Rcode{Failed} column in the curation file can be
-used to manually flag samples for exclusion in downstream analyses.
+used to manually flag samples for exclusion in downstream analyses. See
+Table~\ref{tbl:flags} for an explanation of all flags.
+
+\begin{table*}
+\caption{\Rfunction{createCurationFile} flags.}
+\begin{tabular}{p{3.5cm}p{7.5cm}}
+\toprule
+Flag & Description \\
+\midrule
+EXCESSIVE LOH & $> 50$\% of genome in LOH and ploidy $< 2.6$ \\
+EXCESSIVE LOSSES & $\geq 1$\% of genome deleted \\
+HIGH PURITY AND model.homozygous=FALSE & For very high purity samples,
+it is recommmended to set \Rcode{model.homozygous=TRUE}. See
+Section~\ref{sec:celllines}. \\ 
+HIGH AT- OR GC-DROPOUT & High GC-bias exceeding cutoff in \Rcode{max.dropout} \\
+LOW PURITY & Purity $< 30$\% \\
+LOW BOOTSTRAP VALUE & \Rfunction{bootstrapResults} identified multiple plausible solutions \\
+NOISY LOG-RATIO & Log-ratio standard deviation $>$ \Rcode{max.logr.sdev} \\ 
+NOISY SEGMENTATION & More than \Rcode{max.segments} \\ 
+NON-ABERRANT & $\geq 99 $\% of genome has identical copy number and $\geq>0.5$\% has second most common state \\
+POLYGENOMIC & $\geq 0.75 \times$ \Rcode{max.non.clonal} fraction of the genome in sub-clonal state \\
+POOR GOF & GoF $<$ \Rcode{min.gof} \\
+POTENTIAL SAMPLE CONTAMINATION & Significant portion of dbSNP variants potentially cross-contaminated \\
+RARE KARYOTYPE & Ploidy $< 1.5$ or  $> 4.5$  \\
+\bottomrule
+\end{tabular}
+\label{tbl:flags}
+\end{table*}
+
 
 \section{Cell lines}
 \label{sec:celllines}
